# my-system-configuration

./: .p10k.zsh  .vimrc  .zshrc  Dockerfile  README.md  abhishek_pc_ohmyposhconfig.omp.json  brew_cask_list.txt  brew_list.txt  config_machine_test.sh  config_nano.sh  config_vim.sh  config_zsh.sh  configuration-osx.sh  homebrew.sh  ivz-common-debian.sh  package_list.txt  test_file.bak  zsh_plugins.txt
.devcontainer/: .env  .vimrc  .zshrc  Dockerfile  devcontainer.json  docker-compose.yml  init-db.sh  openssl.conf  postCreateCommand.sh
GnomeTerminal/: .vimrc  install.sh
Linux/: gnome-terminal-settings.txt  important_instructions.md  install.sh
Powershell/: apps.txt  configure_rdp.ps1  configure_ssh_client.ps1  important_instructions.md  important_instructions.txt  install_apps.ps1
Windows/: abhishek_pc_ohmyposhconfig.omp.json  apps.txt  configure_ssh_client.ps1  configure_ssh_host.ps1  important_instructions.md  install_apps.ps1  settings.json  video_convertor.ps1
conda-env/: Dockerfile  config_conda.sh  config_conda_envs.sh  config_conda_test.sh  package_list.txt  py-env-condarc  py-env.yml  snowflake-env-condarc  snowflake-env.yml
gnome-terminal/: .gitconfig  .zshrc  install.sh
py-env/: pyproject.toml
py-project/: pyproject.toml
vim/: config_vim.sh  vim_plugins.txt
zsh/: .zshrc  config_zsh.sh
